# K-Leetcode

./: CMakeLists.txt  README.md  Template.md
1_two-sum/: main.cpp
227_basic-calculator-ii/: 227_basic-calculator-ii.md
Aim-At-Offer/: readme.md
Aim-At-Offer/03_find_repeat_num/: 03_find_repeat_num.md  main.cpp
Aim-At-Offer/04_lookup-in-a-two-dimensional-array/: 04_lookup-in-a-two-dimensional-array.md  main.cpp
Aim-At-Offer/05_replace-spaces/: 05_replace-spaces.md  main.cpp
Aim-At-Offer/06_print-linked-list-from-beginning-to-end/: 06_print-linked-list-from-beginning-to-end.md  main.cpp  main.py
Aim-At-Offer/07_rebuilt-binary-tree/: main.cpp
Aim-At-Offer/09_Implement_the_queue_with_two_stacks/: main.cpp
Aim-At-Offer/09_fibonacci/: main.cpp
Aim-At-Offer/10_frog-jump-step-problem/: 10_frog-jump-step-problem.md  main.cpp
Aim-At-Offer/11_find-minimum-in-rotated-sorted-array/: 11_find-minimum-in-rotated-sorted-array.md  main.cpp
Aim-At-Offer/12_path-in-the-matrix/: main.cpp
Aim-At-Offer/24_reverse-linked-list/: 24_reverse-linked-list.md  main.cpp
Aim-At-Offer/67_myAtoi/: 67_myAtoi.md  main.cpp
Aim-At-Offer/Book/05_replace-spaces/: main.cpp
Aim-At-Offer/Book/06_print-linked-list-from-beginning-to-end/: print-linked-list-from-beginning-to-end.cpp
Aim-At-Offer/Book/09_Implement_the_queue_with_two_stacks/: 09_Implement_the_queue_with_two_stacks.md  main.py
Aim-At-Offer/Book/09_fibonacci/: 09_fibonacci.md
Aim-At-Offer/Book/53_missing-number/: main.cpp
Aim-At-Offer/Interview/09-19/: main.py
CppUtils/: KPrint.h  KStruct.cpp  KStruct.h  readme.md
Leetcode/119_number-of-1-bits/: 119_number-of-1-bits.md  main.cpp
Leetcode/125_valid-palindrome/: 125_valid-palindrome.md  main.cpp
Leetcode/136_single-number/: main.cpp
Leetcode/14_longest_common_prefix/: 14_longest-common-prefix.md  main.cpp
Leetcode/153_find-minimum-in-rotated-sorted-array-i/: 153_find-minimum-in-rotated-sorted-array-i.md
Leetcode/154_find-minimum-in-rotated-sorted-array-ii/: 154_find-minimum-in-rotated-sorted-array-ii.md  main.cpp
Leetcode/189_rotate-array/: 189_rotate-array.md  main.cpp
Leetcode/19_remove-nth-node-from-end-of-list/: main.cpp
Leetcode/227_basic-calculator-ii/: main.cpp
Leetcode/237_delete-node-in-a-linked-list/: main.cpp
Leetcode/26_remove-duplicates-from-sorted-array/: 26_remove-duplicates-from-sorted-array.md  main.cpp
Leetcode/283_move-zeroes/: 283_move-zeroes.md  main.cpp
Leetcode/341_flatten-nested-list-iterator/: main2.cpp
Leetcode/344_reverse-string/: main.cpp
Leetcode/350_intersection-of-two-arrays-ii/: 350_intersection-of-two-arrays-ii.md  main.cpp
Leetcode/36_valid-sudoku/: main.cpp
Leetcode/387_first-unique-character-in-a-string/: 387_first-unique-character-in-a-string.md  main.cpp
Leetcode/38_count-and-say/: 38_count-and-say.md  main.cpp
Leetcode/7_reverse-integer/: 7_reverse-integer.md  main.cpp
Leetcode/Array&String/11_container-with-most-water/: main.cpp
Leetcode/Array&String/136_single-number/: readme.md
Leetcode/Array&String/154_find-minimum-in-rotated-sorted-array-ii/: readme.md
Leetcode/Array&String/15_3sum/: main.py
Leetcode/Array&String/169_majority-element/: main.cpp  main.py  readme.md
Leetcode/Array&String/283_move-zeroes/: readme.md
Leetcode/Array&String/31_next-permutation/: main.cpp  main.py  readme.md
Leetcode/Array&String/334_increasing-triplet-subsequence/: main.cpp  main.py  readme.md
Leetcode/Array&String/33_search-in-rotated-sorted-array/: main.cpp
Leetcode/Array&String/341_flatten-nested-list-iterator/: main1.cpp  readme.md
Leetcode/Array&String/36_valid-sudoku/: readme.md
Leetcode/Array&String/3_longest-substring-without-repeating-characters/: main.py  readme.md
Leetcode/Array&String/48_rotate-image/: readme.md
Leetcode/Array&String/49_group-anagrams/: main.cpp  main.py  readme.md
Leetcode/Array&String/73_set-matrix-zeroes/: main.py
Leetcode/Array/121_best-time-to-buy-and-sell-stock/: main.cpp  readme.md
Leetcode/Array/136_single-number/: 136_single-number.md
Leetcode/Array/153_find-minimum-in-rotated-sorted-array-i/: main.cpp
Leetcode/Array/15_3sum/: main.cpp  readme.md
Leetcode/Array/283_move-zeroes/: 283_move-zeroes.md
Leetcode/Array/33_search-in-rotated-sorted-array/: main.py  readme.md
Leetcode/Array/341_flatten-nested-list-iterator/: main.cpp
Leetcode/Array/34_find-first-and-last-position-of-element-in-sorted-array/: main.cpp  readme.md
Leetcode/Array/48_rotate-image/: main.cpp
Leetcode/Array/66_plus-one/: main.cpp  readme.md
Leetcode/Array/73_set-matrix-zeroes/: 73_set-matrix-zeroes.md  main.cpp  main.py  readme.md
Leetcode/Array/74_search-a-2d-matrix/: 74_search-a-2d-matrix.md  main.cpp
Leetcode/Backtrace/17_letter-combinations-of-a-phone-number/: 17_letter-combinations-of-a-phone-number.md  main.cpp  main.py  readme.md
Leetcode/Backtrace/22_generate-parentheses/: main.cpp  main.py  readme.md
Leetcode/Backtrace/39_combination-sum/: main.cpp  main.py  readme.md
Leetcode/Backtrace/46_permutations/: main.cpp  main.py  readme.md
Leetcode/Backtrace/77_combinations/: main.py  readme.md
Leetcode/Backtrace/78_subsets/: main.cpp  readme.md
Leetcode/Backtrace/79_word-search/: main.cpp  main.py  reademe.md
Leetcode/Backtrace/8-8_permutation-ii-lcci/: main.py  readme.md
Leetcode/Design/155_min-stack/: 155_min-stack.md  main.cpp  main.py
Leetcode/Design/384_shuffle-an-array/: 384_shuffle-an-array.md  main.cpp
Leetcode/Dynamic/122_best-time-to-buy-and-sell-stock-ii/: 122_best-time-to-buy-and-sell-stock-ii.md  main.cpp
Leetcode/Dynamic/198_house-robber/: 198_house-robber.md  main.cpp
Leetcode/Dynamic/53_maximum-subarray/: 53_maximum-subarray.md  main.cpp  main.py  readme.md
Leetcode/Dynamic/55_jump-game/: main.cpp  main.py  readme.md
Leetcode/Dynamic/5_longest-palindromic-substring/: main.cpp  main.py  readme.md
Leetcode/Dynamic/62_unique-paths/: main.cpp  main.py
Leetcode/Graph/200_number-of-islands/: main.cpp  main.py  (+1 more)
PyUtils/: kprint.py  kstruct.py
TopicLists/: Primary.md
Utils/: KPrint.h  KStruct.h
test/: main.py
(+123 files in other folders)
