cmake_minimum_required(VERSION 3.17)
project(K_Leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(1_two-sum Leetcode/1_two-sum/main.cpp)
add_executable(26_remove-duplicates-from-sorted-array Leetcode/26_remove-duplicates-from-sorted-array/main.cpp)
add_executable(66_plus-one Leetcode/66_plus-one/main.cpp)
add_executable(119_number-of-1-bits Leetcode/119_number-of-1-bits/main.cpp)
add_executable(136_single-number Leetcode/136_single-number/main.cpp)
add_executable(153_find-minimum-in-rotated-sorted-array-i Leetcode/153_find-minimum-in-rotated-sorted-array-i/main.cpp)
add_executable(154_find-minimum-in-rotated-sorted-array-ii Leetcode/154_find-minimum-in-rotated-sorted-array-ii/main.cpp)
add_executable(189_rotate-array Leetcode/189_rotate-array/main.cpp)
add_executable(227_basic-calculator-ii Leetcode/227_basic-calculator-ii/main.cpp)
add_executable(283_move-zeroes Leetcode/283_move-zeroes/main.cpp)
add_executable(341_flatten-nested-list-iterator Leetcode/341_flatten-nested-list-iterator/main.cpp)
add_executable(350_intersection-of-two-arrays-ii Leetcode/350_intersection-of-two-arrays-ii/main.cpp)


add_executable(03_find-repeat-num Aim-At-Offer/03_find-repeat-num/main.cpp)
add_executable(04_lookup-in-a-two-dimensional-array Aim-At-Offer/04_lookup-in-a-two-dimensional-array/main.cpp)
add_executable(05_replace-spaces Aim-At-Offer/05_replace-spaces/main.cpp)
add_executable(06_print-linked-list-from-beginning-to-end Aim-At-Offer/06_print-linked-list-from-beginning-to-end/main.cpp)
add_executable(07_rebuilt-binary-tree Aim-At-Offer/07_rebuilt-binary-tree/main.cpp)
add_executable(08_Implement_the_queue_with_two_stacks Aim-At-Offer/08_Implement_the_queue_with_two_stacks/main.cpp)
add_executable(09_fibonacci Aim-At-Offer/09_fibonacci/main.cpp)
add_executable(10_frog-jump-step-problem Aim-At-Offer/10_frog-jump-step-problem/main.cpp)