cmake_minimum_required(VERSION 3.17)
project(K_Leetcode)

set(CMAKE_CXX_STANDARD 11)

include_directories(CppUtils)
add_executable(1_two-sum Leetcode/Array/1_two-sum/main.cpp)
add_executable(2_add-two-numbers Leetcode/Linked-list/2_add-two-numbers/main.cpp)
add_executable(7_reverse-integer Leetcode/String/7_reverse-integer/main.cpp)
add_executable(8_string-to-integer-atoi Leetcode/String/8_string-to-integer-atoi/main.cpp)
add_executable(13_roma-to-int Leetcode/Math/13_roma-to-int/main.cpp)
add_executable(14_longest_common_prefix Leetcode/String/14_longest_common_prefix/main.cpp)
add_executable(15_3sum Leetcode/Array/15_3sum/main.cpp)
add_executable(17_letter-combinations-of-a-phone-number Leetcode/Backtrace/17_letter-combinations-of-a-phone-number/main.cpp)
add_executable(19_remove-nth-node-from-end-of-list Leetcode/Linked-list/19_remove-nth-node-from-end-of-list/main.cpp)
add_executable(20_valid-parentheses Leetcode/Other/20_valid-parentheses/20_valid-parentheses.cpp)
add_executable(21_merge-two-sorted-lists Leetcode/Linked-list/21_merge-two-sorted-lists/main.cpp)
add_executable(26_remove-duplicates-from-sorted-array Leetcode/Array/26_remove-duplicates-from-sorted-array/main.cpp)
add_executable(28_implement-strstr Leetcode/String/28_implement-strstr/main.cpp)
add_executable(33_search-in-rotated-sorted-array Leetcode/Array/33_search-in-rotated-sorted-array/main.cpp)
add_executable(34_find-first-and-last-position-of-element-in-sorted-array Leetcode/Array/34_find-first-and-last-position-of-element-in-sorted-array/main.cpp)
add_executable(36_valid-sudoku Leetcode/Array/36_valid-sudoku/main.cpp)
add_executable(38_count-and-say Leetcode/String/38_count-and-say/main.cpp)
add_executable(46_permutations Leetcode/Backtrace/46_permutations/main.cpp)
add_executable(48_rotate-image Leetcode/Array/48_rotate-image/main.cpp)
add_executable(53_maximum-subarray Leetcode/Dynamic/53_maximum-subarray/main.cpp)
add_executable(66_plus-one Leetcode/Array/66_plus-one/main.cpp)
add_executable(73_set-matrix-zeroes Leetcode/Array/73_set-matrix-zeroes/main.cpp)
add_executable(74_search-a-2d-matrix Leetcode/Array/74_search-a-2d-matrix/main.cpp)
add_executable(94_binary-tree-inorder-traversal Leetcode/Tree/94_binary-tree-inorder-traversal/main.cpp)
add_executable(98_validate-binary-search-tree Leetcode/Tree/98_validate-binary-search-tree/main.cpp)
add_executable(101_symmetric-tree Leetcode/Tree/101_symmetric-tree/main.cpp)
add_executable(102_binary-tree-level-order-traversal Leetcode/Tree/102_binary-tree-level-order-traversal/main.cpp)
add_executable(104_maximum-depth-of-binary-tree Leetcode/Tree/104_maximum-depth-of-binary-tree/main.cpp)
add_executable(105_construct-binary-tree-from-preorder-and-inorder-traversal Leetcode/Tree/105_construct-binary-tree-from-preorder-and-inorder-traversal/main.cpp)
add_executable(160_intersection-of-two-linked-lists Leetcode/Linked-list/160_intersection-of-two-linked-lists/main.cpp)
add_executable(108_convert-sorted-array-to-binary-search-tree Leetcode/Tree/108_convert-sorted-array-to-binary-search-tree/main.cpp)
add_executable(118_pascals-triangle Leetcode/Other/118_pascals-triangle/main.cpp)
add_executable(119_number-of-1-bits Leetcode/Other/119_number-of-1-bits/main.cpp)
add_executable(121_best-time-to-buy-and-sell-stock Leetcode/Array/121_best-time-to-buy-and-sell-stock/main.cpp)
add_executable(122_best-time-to-buy-and-sell-stock-ii Leetcode/Dynamic/122_best-time-to-buy-and-sell-stock-ii/main.cpp)
add_executable(125_valid-palindrome Leetcode/String/125_valid-palindrome/main.cpp)
add_executable(136_single-number Leetcode/Array/136_single-number/main.cpp)
add_executable(141_linked-list-cycle Leetcode/Linked-list/141_linked-list-cycle/main.cpp)
add_executable(153_find-minimum-in-rotated-sorted-array-i Leetcode/Array/153_find-minimum-in-rotated-sorted-array-i/main.cpp)
add_executable(154_find-minimum-in-rotated-sorted-array-ii Leetcode/Array/154_find-minimum-in-rotated-sorted-array-ii/main.cpp)
add_executable(155_min-stack Leetcode/Design/155_min-stack/main.cpp)
add_executable(189_rotate-array Leetcode/Array/189_rotate-array/main.cpp)
add_executable(190_reverse-bits Leetcode/Other/190_reverse-bits/main.cpp)
add_executable(198_house-robber Leetcode/Dynamic/198_house-robber/main.cpp)
add_executable(200_number-of-islands Leetcode/Graph/200_number-of-islands/main.cpp)
add_executable(204_count-primes Leetcode/Math/204_count-primes/main.cpp)
add_executable(206_reverse-linked-list Leetcode/Linked-list/206_reverse-linked-list/main.cpp)
add_executable(233_number-of-digit-one Leetcode/Math/233_number-of-digit-one/main.cpp)
add_executable(227_basic-calculator-ii Leetcode/String/227_basic-calculator-ii/main.cpp)
add_executable(237_delete-node-in-a-linked-list Leetcode/Linked-list/237_delete-node-in-a-linked-list/main.cpp)
add_executable(234_palindrome-linked-list Leetcode/Linked-list/234_palindrome-linked-list/main.cpp)
add_executable(242_valid-anagram Leetcode/String/242_valid-anagram/main.cpp)
add_executable(283_move-zeroes Leetcode/Array/283_move-zeroes/main.cpp)
add_executable(326_power-of-three Leetcode/Math/326_power-of-three/main.cpp)
add_executable(341_flatten-nested-list-iterator Leetcode/Array/341_flatten-nested-list-iterator/main.cpp)
add_executable(344_reverse-string Leetcode/String/344_reverse-string/main.cpp)
add_executable(350_intersection-of-two-arrays-ii Leetcode/Array/350_intersection-of-two-arrays-ii/main.cpp)
add_executable(384_shuffle-an-array Leetcode/Design/384_shuffle-an-array/main.cpp)
add_executable(387_first-unique-character-in-a-string Leetcode/String/387_first-unique-character-in-a-string/main.cpp)
add_executable(412_fizz-buzz Leetcode/Math/412_fizz-buzz/main.cpp)
add_executable(461_hamming-distance Leetcode/Math/461_hamming-distance/main.cpp)

add_executable(03_find-repeat-num Aim-At-Offer/03_find-repeat-num/main.cpp)
add_executable(04_lookup-in-a-two-dimensional-array Aim-At-Offer/04_lookup-in-a-two-dimensional-array/main.cpp)
add_executable(05_replace-spaces Aim-At-Offer/05_replace-spaces/main.cpp)
add_executable(06_print-linked-list-from-beginning-to-end Aim-At-Offer/06_print-linked-list-from-beginning-to-end/print-linked-list-from-beginning-to-end.cpp)
add_executable(07_rebuilt-binary-tree Aim-At-Offer/07_rebuilt-binary-tree/main.cpp)
add_executable(09_Implement_the_queue_with_two_stacks Aim-At-Offer/09_Implement_the_queue_with_two_stacks/main.cpp)
add_executable(09_fibonacci Aim-At-Offer/09_fibonacci/main.cpp)
add_executable(10_frog-jump-step-problem Aim-At-Offer/10_frog-jump-step-problem/main.cpp)
add_executable(11_find-minimum-in-rotated-sorted-array Aim-At-Offer/11_find-minimum-in-rotated-sorted-array/main.cpp)
add_executable(12_path-in-the-matrix Aim-At-Offer/12_path-in-the-matrix/main.cpp)

add_executable(53_missing-number Aim-At-Offer/53_missing-number/main.cpp)
add_executable(xxx_missing-number Leetcode/Other/xxx_missing-number/main.cpp)
